# sub-util

./: Cargo.toml  config.auth-test.toml  config.example.toml  config.simple.toml
.kiro/specs/clash-subscription-merger/: design.md  requirements.md  tasks.md
src/: app_config.rs  lib.rs  main.rs  proxy_group_generator.rs
src/models/: config.rs  log_level.rs  mod.rs  proxy.rs  proxy_group.rs  proxy_provider.rs  rule.rs  rule_provider.rs  run_mode.rs
tests/: auth_test.rs  compatibility_test.rs  integration_test.rs
